namespace the gem
need the thrift dependency to include the fix for https://issues.apache.org/jira/browse/THRIFT-2145, namespace and release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.9.4 Namespace thrift_client so it can depend on thrift-adamd
+
 v0.9.3 Remove dependency on Mongrel
 Allow users to create wrapped exceptions eagerly
 
